using Integer.valueOf(.) instead of new Integer(.)
git-svn-id: file:///srv/local/data/cleanRepo/trunk@3401 a0517364-e873-4167-b1c8-416daa5a6b91